--- a/Modules/GamePlaningModule/Language/ModuleTexts.de.resx
+++ b/Modules/GamePlaningModule/Language/ModuleTexts.de.resx
@@ -117,12 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="MeetupAnnouncement" xml:space="preserve">
-    <value>{0} möchte mit euch '{1}' spielen.
-Uhrzeit: **{2}**
-Wer mitspielen will, kann auf das {3} Icon hier drunter klicken.</value>
+  <data name="DateTime" xml:space="preserve">
+    <value>Datum und Uhrzeit</value>
   </data>
-  <data name="MeetupAnnouncementParticipantsTitle" xml:space="preserve">
-    <value>**Teilnehmer**</value>
+  <data name="Game" xml:space="preserve">
+    <value>Spiel</value>
+  </data>
+  <data name="MeetupAnnouncementDescription" xml:space="preserve">
+    <value>Ein Treffen wurde organisiert.
+Klicke auf das {0} Icon unten, um deine Teilnahme zu bestätigen.</value>
+  </data>
+  <data name="MeetupAnnouncementTitle" xml:space="preserve">
+    <value>Treffen Ankündigung</value>
+  </data>
+  <data name="Participants" xml:space="preserve">
+    <value>Teilnehmer</value>
   </data>
 </root>
