--- a/Common/Languages/Texts.de.resx
+++ b/Common/Languages/Texts.de.resx
@@ -126,13 +126,16 @@
   <data name="CommandOnlyAllowedInGuild" xml:space="preserve">
     <value>Dieser Befehl ist nur erlaubt in einem Gilden-Channel.</value>
   </data>
+  <data name="GuildNotInitializedYet" xml:space="preserve">
+    <value>Die Gilde ist noch nicht initialisiert. Versuch es in paar Sekunden erneut.</value>
+  </data>
   <data name="NumberRangeError" xml:space="preserve">
     <value>Der Wert für {0} muss zwischen {1} und {2} sein.</value>
   </data>
   <data name="SettingChannelDoesNotExist" xml:space="preserve">
-    <value>Die Einstellung '{0}' für das Modul '{1}' beinhaltet die ID eines Channels ({2}), welches nicht (mehr) existiert. 
+    <value>Die Einstellung '{0}' für das Modul '{1}' beinhaltet einen Channel, welcher nicht (mehr) existiert. 
 
-Falls du ein Admin bist, nutze bitte '!setting {1} {0} [WERT]', um eine richtige Channel-ID einzugeben.
+Falls du ein Admin bist, nutze bitte '!setting {1} {0} [WERT]', um einen richtigen Channel anzugeben.
 Falls nicht, sag einem Admin Bescheid, dass er es tun soll.</value>
   </data>
   <data name="SettingInvalidError" xml:space="preserve">
@@ -145,6 +148,12 @@ Falls nicht, sag einem Admin Bescheid, dass er es tun soll.</value>
     <value>Die Einstellung '{0}' wurde nicht gesetzt. 
 
 Falls du ein Admin bist, nutze bitte '!setting {1} {0} [WERT]', um die Einstellung zu setzen.
+Falls nicht, sag einem Admin Bescheid, dass er es tun soll.</value>
+  </data>
+  <data name="SettingEmoteDoesNotExist" xml:space="preserve">
+    <value>Die Einstellung '{0}' für das Modul '{1}' beinhaltet einen Emote, welcher nicht (mehr) existiert. 
+
+Falls du ein Admin bist, nutze bitte '!setting {1} {0} [WERT]', um einen richtigen Emote anzugeben.
 Falls nicht, sag einem Admin Bescheid, dass er es tun soll.</value>
   </data>
 </root>
