--- a/Common/Languages/Texts.resx
+++ b/Common/Languages/Texts.resx
@@ -126,13 +126,22 @@
   <data name="CommandOnlyAllowedInGuild" xml:space="preserve">
     <value>This command is only allowed in a guild channel.</value>
   </data>
+  <data name="GuildNotInitializedYet" xml:space="preserve">
+    <value>The guild is not initialized yet. Try again after some seconds.</value>
+  </data>
   <data name="NumberRangeError" xml:space="preserve">
     <value>The value for {0} has to be between {1} and {2}.</value>
   </data>
   <data name="SettingChannelDoesNotExist" xml:space="preserve">
-    <value>The setting '{0}' for module '{1}' contains the id of a channel ({2}) which does not exist (anymore). 
+    <value>The setting '{0}' for module '{1}' contains a channel which does not exist (anymore). 
 
-If you are an admin of the guild, please use '!setting {1} {0} [VALUE]' to set a correct channel id.
+If you are an admin of the guild, please use '!setting {1} {0} [VALUE]' to set a correct channel.
+If not, tell an admin to do it.</value>
+  </data>
+  <data name="SettingEmoteDoesNotExist" xml:space="preserve">
+    <value>The setting '{0}' for module '{1}' contains an emote which does not exist (anymore). 
+
+If you are an admin of the guild, please use '!setting {1} {0} [VALUE]' to set a correct emote.
 If not, tell an admin to do it.</value>
   </data>
   <data name="SettingInvalidError" xml:space="preserve">
