--- a/Modules/AdminModule/Languages/ModuleTexts.de.resx
+++ b/Modules/AdminModule/Languages/ModuleTexts.de.resx
@@ -117,46 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CommandInvalidBooleanError" xml:space="preserve">
-    <value>Input could not be parsed as a boolean.</value>
+  <data name="Added" xml:space="preserve">
+    <value>Hinzugefügt</value>
   </data>
-  <data name="CommandInvalidTimeSpanError" xml:space="preserve">
-    <value>Input could not be parsed as a time span.</value>
+  <data name="ErrorHappenedChangesReverted" xml:space="preserve">
+    <value>Ein Fehler ist passiert, die Änderungen wurden zurückgezogen.</value>
   </data>
-  <data name="CommandOnlyAllowedInGuild" xml:space="preserve">
-    <value>This command is only allowed in a guild channel.</value>
+  <data name="Until" xml:space="preserve">
+    <value>Bis</value>
   </data>
-  <data name="GuildNotInitializedYet" xml:space="preserve">
-    <value>The guild is not initialized yet. Try again after some seconds.</value>
+  <data name="UserIsNotBannedError" xml:space="preserve">
+    <value>Dieser Benutzer ist nicht gebannt.</value>
   </data>
-  <data name="NumberRangeError" xml:space="preserve">
-    <value>The value for {0} has to be between {1} and {2}.</value>
+  <data name="YouHaveBannedInfo" xml:space="preserve">
+    <value>Du hast {2} ({3}) für {0} (bis {1} UTC) gebannt.</value>
   </data>
-  <data name="SettingChannelDoesNotExist" xml:space="preserve">
-    <value>The setting '{0}' for module '{1}' contains a channel which does not exist (anymore). 
-
-If you are an admin of the guild, please use '!setting {1} {0} [VALUE]' to set a correct channel.
-If not, tell an admin to do it.</value>
-  </data>
-  <data name="SettingEmoteDoesNotExist" xml:space="preserve">
-    <value>The setting '{0}' for module '{1}' contains an emote which does not exist (anymore). 
-
-If you are an admin of the guild, please use '!setting {1} {0} [VALUE]' to set a correct emote.
-If not, tell an admin to do it.</value>
-  </data>
-  <data name="SettingInvalidError" xml:space="preserve">
-    <value>The setting '{0}' is invalid. 
-
-If you are an admin of the guild, please use '!setting {1} {0} [VALUE]' to set it again.
-If not, tell an admin to do it.</value>
-  </data>
-  <data name="SettingMissingError" xml:space="preserve">
-    <value>The setting '{0}' is missing.
-
-If you are an admin of the guild, please use '!setting {1} {0} [VALUE]' to set it.
-If not, tell an admin to do it.</value>
-  </data>
-  <data name="TargetIsHigherInHierarchyError" xml:space="preserve">
-    <value>The target '{0}' is higher in the hierachie than you.</value>
+  <data name="YouHaveBeenBannedInfo" xml:space="preserve">
+    <value>Du wurdest für {0} (bis {1} UTC) von {2} ({3}) gebannt.
+Grund: {4}</value>
   </data>
 </root>
