Add localization for CommandExecuted error

--- a/Common/Languages/Texts.de.resx
+++ b/Common/Languages/Texts.de.resx
@@ -165,4 +165,11 @@ Falls nicht, sag einem Admin Bescheid, dass er es tun soll.</value>
   <data name="CommandInvalidUserError" xml:space="preserve">
     <value>Die Eingabe konnte nicht als Benutzer geparst werden.</value>
   </data>
+  <data name="CommandExecutedError" xml:space="preserve">
+    <value>'{0}' Fehler aufgetaucht. Fehlermeldung:
+"{1}"
+
+Befehl benutzt: 
+'{2}'</value>
+  </data>
 </root>
