--- a/Common/Languages/Texts.resx
+++ b/Common/Languages/Texts.resx
@@ -117,6 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CommandExecutedError" xml:space="preserve">
+    <value>'{0}' error occured. Message:
+"{1}"
+
+Used command: 
+'{2}'</value>
+  </data>
   <data name="CommandInvalidBooleanError" xml:space="preserve">
     <value>Input could not be parsed as a boolean.</value>
   </data>
