Add bool to settings command

--- a/Modules/GuildSettingsModule/Language/ModuleTexts.de.resx
+++ b/Modules/GuildSettingsModule/Language/ModuleTexts.de.resx
@@ -158,4 +158,7 @@ Geladene Module:
     <value>Die Einstellung wurde erfolgreich mit der Nachricht mit folgendem Inhalt gespeichert:
 {0}</value>
   </data>
+  <data name="SettingBoolSavedSuccessfully" xml:space="preserve">
+    <value>Die Einstellung wurde erfolgreich mit dem Boolean '{0}' gespeichert.</value>
+  </data>
 </root>
